# course_enrollment

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .env.sample  manage.py
src/course/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
src/course/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_created_by_alter_category_updated_by_and_more.py  0004_course_published.py
src/course_enrollment/: asgi.py  mixins.py  urls.py  wsgi.py
src/course_enrollment/settings/: __init__.py  base.py
src/enrollment/: admin.py  forms.py  models.py  urls.py  views.py
src/enrollment/migrations/: 0001_initial.py
src/student/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/student/migrations/: 0001_initial.py  0002_alter_user_options_student.py
src/templates/: base.html  navbar.html
src/templates/course/: category_add.html  category_list.html  course_add.html  course_detail.html  course_list.html  home.html
src/templates/enrollment/: enrollment.html  enrollment_add.html
src/templates/student/: student_list.html
